--- a/JingFM-RoundEffect/en.lproj/MainStoryboard.storyboard
+++ b/JingFM-RoundEffect/en.lproj/MainStoryboard.storyboard
@@ -1280,7 +1280,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qhz-GZ-ZpV" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2160" y="-997"/>
+            <point key="canvasLocation" x="-2178" y="-1027"/>
         </scene>
         <!--Date Idea View Controller - 约会机-->
         <scene sceneID="7U7-ko-yWa">
@@ -1356,7 +1356,7 @@
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="DateIdeaCell" rowHeight="86" id="8CR-6j-kln" customClass="DateIdeaCell">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="DateIdeaCell" rowHeight="86" id="8CR-6j-kln" customClass="DateIdeaCell">
                                         <rect key="frame" x="0.0" y="22" width="320" height="86"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8CR-6j-kln" id="w3q-qQ-bna">
@@ -1375,24 +1375,41 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="星巴克中信店" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.69999998807907104" id="a36-EG-EBR">
-                                                    <rect key="frame" x="81" y="14" width="219" height="38"/>
+                                                    <rect key="frame" x="81" y="20" width="219" height="39"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.69999999999999996" id="OX5-q5-N5e">
-                                                    <rect key="frame" x="81" y="54" width="219" height="22"/>
+                                                    <rect key="frame" x="81" y="58" width="219" height="22"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <button hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="MkP-qm-se5">
+                                                    <rect key="frame" x="232" y="6" width="68" height="18"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                    <state key="normal" title="点击查看更多">
+                                                        <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                            <integer key="value" value="5"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </button>
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="contentLable" destination="a36-EG-EBR" id="vRM-Pj-AB2"/>
                                             <outlet property="descriptionLabel" destination="OX5-q5-N5e" id="hx2-KI-2Yy"/>
                                             <outlet property="iconImageView" destination="igu-h6-ODO" id="qr8-TB-g0K"/>
+                                            <outlet property="moreButton" destination="MkP-qm-se5" id="cVB-4t-HDS"/>
                                             <outlet property="titleLabel" destination="ij1-DI-g9Z" id="ZBK-Eb-eRu"/>
                                         </connections>
                                     </tableViewCell>
@@ -1445,7 +1462,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pRI-IF-crD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2668" y="-1003"/>
+            <point key="canvasLocation" x="-2686" y="-1033"/>
         </scene>
         <!--Expert Message Detail Table View Controller - 问答-->
         <scene sceneID="qPF-no-Eh2">
